# egison-jupyter

./: .gitignore  Chern.ipynb  Demo1-Riemann-Curvature.ipynb  Demo2-Hodge-Laplacian.ipynb  Laplacian.ipynb  README.md  RiemannCurvatureS2-Detail.ipynb  RiemannCurvatureS2.ipynb  RiemannCurvatureT2-Detail.ipynb  RiemannCurvatureT2-DetailOld.ipynb  Symbolic computation.ipynb  curvature-form.ipynb  sample.ipynb  setup.py
egison_kernel/: install.py  kernel.py
jupyterlab-egison/: .gitignore  README.md  install.json  package.json  pyproject.toml
jupyterlab-egison/jupyterlab_egison/: __init__.py
jupyterlab-egison/src/: index.ts
jupyterlab-egison/style/: base.css
math/: 17th-root-of-unity.ipynb  5th-root-of-unity.ipynb  7th-root-of-unity.ipynb  9th-root-of-unity.ipynb  README.md  chern-form-of-CP1.ipynb  cubic-equation.ipynb  curvature-form.ipynb  eisenstein-primes.ipynb  emr-highest-power-coefficient.ipynb  emr-thurston-wcs-invariant.ipynb  euler-form-of-S2.ipynb  euler-form-of-T2.ipynb  eulers-formula.ipynb  eulers-totient-function.ipynb  exterior-derivative.ipynb  fourier-series.ipynb  gaussian-curvature-of-surface.ipynb  gaussian-primes.ipynb  hodge-E3.ipynb  hodge-laplacian-polar.ipynb  hodge-laplacian-spherical.ipynb  hodge-minkowski.ipynb  laplacian-hessian-jacobian.ipynb  leibniz-formula.ipynb  order-of-partial-derivative.ipynb  polar-laplacian-2d.ipynb  polar-laplacian-3d.ipynb  quadratic-equation.ipynb  quartic-equation.ipynb  riemann-curvature-tensor-of-FLRW-metric.ipynb  riemann-curvature-tensor-of-S2.ipynb  riemann-curvature-tensor-of-S2xS3.ipynb  riemann-curvature-tensor-of-S3.ipynb  riemann-curvature-tensor-of-S4.ipynb  riemann-curvature-tensor-of-S5.ipynb  riemann-curvature-tensor-of-S7.ipynb  tribonacci.ipynb  (+6 more)
(+101 files in other folders)
